clusters/cluster0/kubernetes/apps/rook-ceph/rook-ceph/cluster/lidarr-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph
  namespace: rook-ceph
spec:
  hostnames:
  - rook-ceph.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: network
  rules:
  - backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 7000
    matches:
    - path:
        type: PathPrefix
        value: /
